made responses visible and fixed styling

--- a/requester/src/App.css
+++ b/requester/src/App.css
@@ -38,3 +38,9 @@ button:hover {
 .input {
   width: 300px;
 }
+
+.response {
+  margin-top: 70px;
+  padding: 30px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
